--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   carousel_slider: ^4.2.1
   location: ^4.4.0
   geolocator: ^9.0.2
+  geocoding: ^2.0.5
   google_maps_flutter: ^2.2.3
   flutter_rating_bar: any
   image_picker: ^0.8.6+1
