--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,7 +44,7 @@ dependencies:
   flutter_spinkit: ^5.1.0
   dio: ^4.0.6
   flutter_svg: ^2.0.0+1
-  circular_check_box: ^1.0.4
+  #circular_check_box: ^1.0.4
   flutter_html: ^3.0.0-alpha.3
   url_launcher: ^6.1.8
   dots_indicator: ^2.1.0
@@ -59,7 +59,7 @@ dependencies:
   webview_flutter: any
   flutter_app_badger: any
   gesture_zoom_box: ^0.0.4
-
+  pin_code_text_field: ^1.8.0
 
   
 
