--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter application.
 version: 2.0.2+10
 
 environment:
-  sdk: ">=2.19.1 <3.0.0"
+  sdk: ">=2.18.5 <3.0.0"
 
 
 dependencies:
@@ -43,7 +43,7 @@ dependencies:
   shimmer: ^2.0.0
   flutter_spinkit: ^5.1.0
   dio: ^4.0.6
-  flutter_svg: ^2.0.0+1
+  flutter_svg: ^1.1.6
   #circular_check_box: ^1.0.4
   flutter_html: ^3.0.0-alpha.3
   url_launcher: ^6.1.8
@@ -60,7 +60,7 @@ dependencies:
   flutter_app_badger: any
   gesture_zoom_box: ^0.0.4
   pin_code_text_field: ^1.8.0
-
+  firebase_core : any
 
   
 
