--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   toast: ^0.3.0
   flutter_offline: ^2.1.0
   firebase_messaging: ^14.2.1
-  flutter_local_notifications:
+  flutter_local_notifications: ^9.6.0
   shimmer: ^2.0.0
   flutter_spinkit: ^5.1.0
   dio: ^4.0.6
