--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
 
     <application
 
-        android:label="qitea"
+        android:label="قطعة غيار"
         android:icon="@mipmap/ic_launcher">
     <meta-data android:name="com.google.android.geo.API_KEY"
                android:value="AIzaSyBUxwCTSpUnf2aPuLV-9H8yQ6H8rRpF3Tc"/>
