--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.2+20
+version: 2.0.3+22
 
 environment:
   sdk: ">=2.18.5 <3.0.0"
@@ -62,7 +62,7 @@ dependencies:
   pin_code_text_field: ^1.8.0
   firebase_core : any
   share: ^2.0.4
-
+  permission_handler: any
   
 
 
