--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter application.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.0.3+22
+version: 2.0.3+30
 
 environment:
   sdk: ">=2.18.5 <3.0.0"
@@ -63,7 +63,8 @@ dependencies:
   firebase_core : any
   share: ^2.0.4
   permission_handler: any
-  
+  webview_flutter_android: ^3.9.2
+  webview_flutter_wkwebview: ^3.7.2
 
 
  
